--- a/src/main/resources/templates/helloworld-form.html
+++ b/src/main/resources/templates/helloworld-form.html
@@ -9,7 +9,7 @@
           th:href="@{/css/demo.css}" />
 </head>
 <body>
-    <form th:action="@{/processForm}" method="GET">
+    <form th:action="@{/processForm2}" method="GET">
         <input type="text" name="studentName" placeholder="What's your name?"/>
         <input type="submit" />
     </form>
