--- a/src/main/resources/templates/helloworld.html
+++ b/src/main/resources/templates/helloworld.html
@@ -5,9 +5,11 @@
     <title>Thymeleaf Demo</title>
 </head>
 <body>
-Hello World of Spring!
+    Hello World of Spring!
     <br><br>
-Student name: <span th:text="${param.studentName}"></span>
+    Student name: <span th:text="${param.studentName}"></span>
+    <br><br>
+    The message: <span th:text="${message}"></span>
 </body>
 
 </html>
