--- a/src/main/resources/templates/student-confirmation.html
+++ b/src/main/resources/templates/student-confirmation.html
@@ -10,6 +10,10 @@
 
 <form th:action="@{/processStudentForm}" th:object="${student}" method="POST" >
     The Student is confirmed: <span th:text="${student.firstName} + ' ' + ${student.lastName}"></span>
+    <br><br>
+    Country: <span th:text="${student.country}"></span>
+
+
 </form>
 
 </body>
