--- a/src/main/resources/templates/student-confirmation.html
+++ b/src/main/resources/templates/student-confirmation.html
@@ -12,6 +12,8 @@
     The Student is confirmed: <span th:text="${student.firstName} + ' ' + ${student.lastName}"></span>
     <br><br>
     Country: <span th:text="${student.country}"></span>
+    <br><br>
+    Favorite Language: <span th:text="${student.favoriteLanguage}"></span>
 </form>
 
 </body>
