--- a/src/main/resources/templates/student-form.html
+++ b/src/main/resources/templates/student-form.html
@@ -18,8 +18,14 @@
         <select th:field="*{country}">
             <option th:each="tempCountry : ${countries}" th:value="${tempCountry}" th:text="${tempCountry}"></option>
         </select>
-
         <br><br>
+
+        Favourite Programming Language:
+        <input type="radio" th:field="*{favoriteLanguage}" th:value="Go">Go</input>
+        <input type="radio" th:field="*{favoriteLanguage}" th:value="Java">Java</input>
+        <input type="radio" th:field="*{favoriteLanguage}" th:value="Python">Python</input>
+        <br><br>
+
         <input type="submit" value="Submit"/>
     </form>
 
