--- a/src/main/resources/templates/student-form.html
+++ b/src/main/resources/templates/student-form.html
@@ -21,9 +21,10 @@
         <br><br>
 
         Favourite Programming Language:
-        <input type="radio" th:field="*{favoriteLanguage}" th:value="Go">Go</input>
-        <input type="radio" th:field="*{favoriteLanguage}" th:value="Java">Java</input>
-        <input type="radio" th:field="*{favoriteLanguage}" th:value="Python">Python</input>
+        <input type="radio" th:field="*{favoriteLanguage}"
+               th:each="tempLang : ${languages}"
+               th:value="${tempLang}"
+               th:text=="${tempLang}" />
         <br><br>
 
         <input type="submit" value="Submit"/>
