--- a/src/main/resources/templates/student-confirmation.html
+++ b/src/main/resources/templates/student-confirmation.html
@@ -14,7 +14,9 @@
     Country: <span th:text="${student.country}"></span>
     <br><br>
     Favorite Language: <span th:text="${student.favoriteLanguage}"></span>
+    <br><br>
+    Favorite Operating Systems: <span th:text="${student.favoriteSystems}"></span>
 </form>
-
 </body>
+
 </html>
