style(view): format checkbox confirmation as bullet list

--- a/src/main/resources/templates/student-confirmation.html
+++ b/src/main/resources/templates/student-confirmation.html
@@ -15,7 +15,10 @@
     <br><br>
     Favorite Language: <span th:text="${student.favoriteLanguage}"></span>
     <br><br>
-    Favorite Operating Systems: <span th:text="${student.favoriteSystems}"></span>
+    Favorite Operating Systems:
+    <ul>
+        <li th:each="tmpSystems : ${student.favoriteSystems}" th:text="${tmpSystems}"></li>
+    </ul>
 </form>
 </body>
 
