--- a/src/main/resources/templates/student-form.html
+++ b/src/main/resources/templates/student-form.html
@@ -26,12 +26,13 @@
                th:value="${tempLang}"
                th:text=="${tempLang}" />
         <br><br>
-        Favorite Operating Systems:
-        <input type="checkbox" th:field="*{favoriteSystems}" th:value="Linux">Linux</input>
-        <input type="checkbox" th:field="*{favoriteSystems}" th:value="macOS">macOS</input>
-        <input type="checkbox" th:field="*{favoriteSystems}" th:value="Windows">Windows</input>
 
+        <input type="checkbox" th:field="*{favoriteSystems}"
+               th:each="tempSystem : ${systems}"
+               th:value="${tempSystem}"
+               th:text=="${tempSystem}" />
         <br><br>
+
         <input type="submit" value="Submit"/>
     </form>
 
