--- a/src/main/resources/templates/customer-confirmation.html
+++ b/src/main/resources/templates/customer-confirmation.html
@@ -12,6 +12,7 @@
 The customer is confirmed <span th:text="${customer.firstName + ' ' + customer.lastName}" ></span>
 <br><br>
 Free passes: <span th:text="${customer.freePasses}" ></span>
-
+<br><br>
+Free passes: <span th:text="${customer.postalCode}" ></span>
 </body>
 </html>
