(fix): made Free Passes field required

--- a/src/main/resources/templates/customer-confirmation.html
+++ b/src/main/resources/templates/customer-confirmation.html
@@ -13,6 +13,6 @@ The customer is confirmed <span th:text="${customer.firstName + ' ' + customer.l
 <br><br>
 Free passes: <span th:text="${customer.freePasses}" ></span>
 <br><br>
-Free passes: <span th:text="${customer.postalCode}" ></span>
+Postal Code: <span th:text="${customer.postalCode}" ></span>
 </body>
 </html>
