--- a/src/main/resources/templates/employees/list-employees.html
+++ b/src/main/resources/templates/employees/list-employees.html
@@ -11,26 +11,36 @@
 
 </head>
 <body>
+    <div class="container">
 
-<div class="container"></div>
-    <h3>Employee Directory</h3>
-    <hr>
-    <table class="table table-bordered table-striped">
-        <thead class="table-dark">
+        <h3>Employee Directory</h3>
+        <hr>
+
+        <!-- Add a button -->
+        <a th:href="@{/employees/showFormForAdd}"
+           class="btn btn-primary btn-sm mb-3">
+            Add Employee
+        </a>
+
+        <table class="table table-bordered table-striped">
+            <thead class="table-dark">
             <tr>
                 <th>First Name</th>
                 <th>Last Name</th>
-                <th>EMail</th>
+                <th>Email</th>
             </tr>
-        </thead>
-        <tbody>
-            <tr th:each="tempEmployee : ${employees}">
-                <td th:text="${tempEmployee.firstName}"> </td>
-                <td th:text="${tempEmployee.lastName}"> </td>
-                <td th:text="${tempEmployee.email}"> </td>
-            </tr>
-        </tbody>
-    </table>
+            </thead>
 
+            <tbody>
+            <tr th:each="tempEmployee : ${employees}">
+
+                <td th:text="${tempEmployee.firstName}" />
+                <td th:text="${tempEmployee.lastName}" />
+                <td th:text="${tempEmployee.email}" />
+
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
