--- a/src/main/resources/templates/employees/list-employees.html
+++ b/src/main/resources/templates/employees/list-employees.html
@@ -7,40 +7,47 @@
 
     <!--bootstrap-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
 </head>
 <body>
-    <div class="container">
+<div class="container">
 
-        <h3>Employee Directory</h3>
-        <hr>
+    <h3>Employee Directory</h3>
+    <hr>
 
-        <!-- Add a button -->
-        <a th:href="@{/employees/showFormForAdd}"
-           class="btn btn-primary btn-sm mb-3">
-            Add Employee
-        </a>
+    <!-- Add a button -->
+    <a th:href="@{/employees/showFormForAdd}"
+       class="btn btn-primary btn-sm mb-3">
+        Add Employee
+    </a>
 
-        <table class="table table-bordered table-striped">
-            <thead class="table-dark">
-            <tr>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Email</th>
-            </tr>
-            </thead>
+    <table class="table table-bordered table-striped">
+        <thead class="table-dark">
+        <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Email</th>
+            <th>Action</th>
+        </tr>
+        </thead>
 
-            <tbody>
-            <tr th:each="tempEmployee : ${employees}">
+        <tbody>
+        <tr th:each="tempEmployee : ${employees}">
 
-                <td th:text="${tempEmployee.firstName}" />
-                <td th:text="${tempEmployee.lastName}" />
-                <td th:text="${tempEmployee.email}" />
-
-            </tr>
-            </tbody>
-        </table>
-    </div>
+            <td th:text="${tempEmployee.firstName}"></td>
+            <td th:text="${tempEmployee.lastName}"></td>
+            <td th:text="${tempEmployee.email}"></td>
+            <td>
+                <a th:href="@{/employees/showFormForUpdate(employeeID=${tempEmployee.id})}"
+                   class="btn btn-info btn-sm">
+                    Update
+                </a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 </body>
 </html>
