--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -18,6 +18,11 @@
     <br><br>
     Role(s): <span sec:authentication="principal.authorities"></span>
 </p>
+<hr>
+<p>
+<a th:href="@{/leaders}">Leadership Meeting</a>
+    (Only for Manager peeps)
+</p>
 
 <form action="#" th:action="@{/logout}" method="POST">
     <input type="submit" value="logout"/>
