--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -23,6 +23,11 @@
 <a th:href="@{/leaders}">Leadership Meeting</a>
     (Only for Manager peeps)
 </p>
+<hr>
+<p>
+    <a th:href="@{/systems}">IT Systems Meeting</a>
+    (Only for Admin peeps)
+</p>
 
 <form action="#" th:action="@{/logout}" method="POST">
     <input type="submit" value="logout"/>
